# remote_controller

./: .codex_ssh_remdesk  .codex_ssh_remdesk.pub  .gitignore  AGENTS.md  README.md  RemoteControllerClient.spec  client.py  index.html  main.py  pytest.ini  rc_deploy_4a5ef2b.tar  requirements.txt  requirements_global.txt  setup_windows.bat  signaling_server.py
client/: ABE_SCHEME.md  INSTALL_INSTRUCTIONS.md  README.md  RemoteControllerClient.spec  abe_diagnostic.py  build_windows.bat  build_windows_silent.bat  client.py  disable_abe.py  requirements-client.txt  setup_windows.bat  start_silent.vbs
client/remote_client/: RemoteControllerClient.spec  abe_status.py  config.py  main.py  rc_activity.env  runtime.py  session_factory.py  (+1 more)
client/remote_client/cookie_extractor/abe_native/: CMakeLists.txt  README.md  __init__.py  setup.py
client/remote_client/cookie_extractor/abe_native/src/: abe_common.hpp  abe_module.cpp  aes_gcm.hpp  elevator.hpp
operator/: README.md  app.js  hvnc_window.html  index.html  styles.css
operator_desktop/: README.md  RemDeskOperator.spec  app.py  build_windows_silent.bat  entrypoint.py  launcher.py  main.py  remote_session.py  requirements.txt
password_extractor/: README.md  __init__.py  extractor.py
remote_client/: __init__.py  main.py
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  healthcheck.py  nginx.conf  requirements-signaling.txt  run.sh  signaling_server.py
tests/: conftest.py  test_app_bound_encryption.py  test_client.py  test_control_handler.py  test_e2ee.py  test_media_streaming.py  test_socks5_proxy.py
(+145 files in other folders)
